@@ -1,5 +1,6 @@
 05-Jan-2003 by Matthias Braun
 -server browser works so far
+-converted yet another array like class in ProjectileInterface to std::list
 
 04-Jan-2003 by Matthias Braun
 -started a new IRC library
